# cuVite

./: .gitignore  CMakeLists.txt  compile.sh  copy_louvain_cuda.cu  copy_modularity.cu  louvain.cpp
converters/: CMakeLists.txt
